header and intro desktop done

--- a/src/index.html
+++ b/src/index.html
@@ -28,8 +28,13 @@
                 <a href="https://www.instagram.com/hiblend/"><i class="fab fa-instagram"></i></a>
               </li>
           </ul>
-
         </nav>
+
+        <div class="hiblend-header-text">
+          <h2 class="header-text-one">our food is</h2>
+          <h2>all natural <span class="header-and">&</span> </h2>
+          <h2 class="header-text-two">locally sourced</h2>
+        </div>
 
       </div>
 
@@ -37,22 +42,11 @@
 
 
     <section id="home" class="home">
-      <section class="row home-intro">
-        <div class="container">
-          <div class="img">
-            <img class="change" src="images/home.jpg" alt="drinks" />
-            <h2>our food</h2>
-            <h2>is all natural</h2>
-            <h1>&</h1>
-            <h2>locally sourced</h2>
-          </div>
-          <div class="col">
-            <h1>stay healthy friends!</h1>
-            <p>
-              HiBlend Health Bar & Cafe is committed to sourcing all natural, farm fresh, organic, non-GMO & locally made ingredients. We focus on simple, delicious flavors & health. Together lets live a healthier lifestyle!
-            </p>
-          </div>
-          </section>
+      <div class="row home-intro">
+        <h1>stay healthy friends!</h1>
+        <p>
+          HiBlend Health Bar & Cafe is committed to sourcing all natural, farm fresh, organic, non-GMO & locally made ingredients. We focus on simple, delicious flavors & health. Together lets live a healthier lifestyle!
+        </p>
         </div>
       </section>
 
