--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,7 @@
 
     <section id="home" class="home">
       <div class="row home-intro">
-        <h1>stay healthy friends!</h1>
+        <h1>Stay Healthy Friends!</h1>
         <p>
           HiBlend Health Bar & Cafe is committed to sourcing all natural, farm fresh, organic, non-GMO & locally made ingredients. We focus on simple, delicious flavors & health. Together lets live a healthier lifestyle!
         </p>
@@ -52,30 +52,30 @@
 
 
     <section class="menu">
-      <section class="grid">
-      </section>
+      <div class="menu-img header-img">
+        <img src="images/menus.png" alt="">
+      </div>
 
-          <h4 id="menu">MENU</h4>
-          <!--menu header-->
-          <nav class="subnav">
-            <div class="container row">
-              <ul>
-                <li><a href="#/" id="a">Drinks</a></li>
-                <li><a href="#/" id="b">Health Bowls</a></li>
-                <li><a href="#/" id="c">Food</a></li>
-                <!-- <li><a href="#">Download PDF</a></li> -->
-              </ul>
-            </div>
-          </nav>
+      <nav class="location-nav">
+        <ul>
+          <li><a href="#" id="">KEEAUMOKU</a></li>
+          <li><a href="#" id="">WAHIAWA</a></li>
+        </ul>
+      </nav>
+
+      <nav class="menu-subnav">
+          <ul>
+            <li><a href="#/" id="a">Drinks</a></li>
+            <li><a href="#/" id="b">Health Bowls</a></li>
+            <li><a href="#/" id="c">Food</a></li>
+            <!-- <li><a href="#">Download PDF</a></li> -->
+          </ul>
+      </nav>
 
       <section class="drnks">
         <div id="menudrinks">
+          <div class="container dr">
 
-          <div class="d">
-          </div>
-          <div class="container row dr">
-
-              <h1 id="drinks"class="drinks">drinks</h1>
               <div class="drinkscol">
 
                 <div class="item">
@@ -111,12 +111,12 @@
                     </p>
                   </div>
                   <div class="line">
-                    <p class="includes">
+                    <p class="item">
                       Includes:
                     </p>
                   </div>
                   <div class="line">
-                    <div class="space">
+                    <div class="item">
                       <p>
                         Heart-beet
                       </p>
@@ -126,7 +126,7 @@
                         </p>
                     </div>
 
-                    <div class="space">
+                    <div class="item">
                       <p>
                         24-Carrot
                       </p>
@@ -136,7 +136,7 @@
                         </p>
                     </div>
 
-                    <div class="space">
+                    <div class="item">
                       <p>
                         Magi-Kale
                       </p>
@@ -148,7 +148,7 @@
 
                   </div>
                   <div class="line">
-                    <p class="includes">
+                    <p class="item-option">
                       & Your choice of:
                     </p>
                   </div>
@@ -161,9 +161,11 @@
                       </p>
                   </div>
 
-                  <p class="includes">
-                    or
-                  </p>
+                  <div class="line">
+                    <p class="item-option">
+                      OR
+                    </p>
+                  </div>
 
                   <div class="line">
                     <p>
@@ -353,7 +355,7 @@
                 </div>
               </div>
           </div>
-          <a href="#menu"><p class="back">
+          <a class="back-button" href="#menu"><p class="back">
           BACK TO MENU OPTIONS >>
           </p></a>
         </div>
@@ -361,11 +363,10 @@
 
       <section class="hb">
 
-          <div class="container row vertical-align">
-            <div id="menubowls">
+          <div id="menubowls">
+            <div class="container vertical-align">
 
               <div class="col">
-                <h1 id="hbowls" class="hbowls">health bowls</h1>
                 <div class="item">
                   <p>
                     Acai Bowl <span class="price">9.95</span>
@@ -414,7 +415,7 @@
               <div class="col-bowl">
                 <img class="bowl"src="images/hiblend bowl.jpg" alt="HiBlend Bowl" />
               </div>
-              <a href="#menu"><p class="back">
+              <a class="back-button hb-back" href="#menu"><p class="back">
               BACK TO MENU OPTIONS >>
               </p></a>
             </div>
@@ -426,13 +427,11 @@
 
           <div id="menufood">
             <div class="container">
-              <h1 id="foods"class="food">food</h1>
             </div>
 
 
               <div class="sidebar">
                 <h2 class="dressing">HOUSE DRESSINGS</h2>
-                <div class="container row">
                   <div class="house">
 
                     <ul class="col-1">
@@ -452,12 +451,11 @@
                       <li>Avocado Aioli</li>
                     </ul>
                   </div>
-                </div>
               </div>
             <!-- </div> -->
 
 
-            <div class="container row f">
+            <div class="container f">
               <div class="col food-item">
 
                 <div class="item">
@@ -641,7 +639,7 @@
                     </p>
                 </div>
               </div>
-              <a href="#menu"><p class="back2">
+              <a class="back-button f-back" href="#menu"><p class="back">
               BACK TO MENU OPTIONS >>
               </p></a>
             </div>
@@ -649,43 +647,74 @@
       </section>
 
     <section class="contact">
-      <h4 id="contact">CONTACT</h4>
-      <div class="row">
-
-      <div class="contact-image">
-
+      <div class="contact-img header-img">
+        <img src="images/contact.png" alt="">
       </div>
 
-    <!-- </div> -->
-      <div class="col4">
-        <div class="item">
-          <h2 class="subheading">Hours</h2>
-          <p>
-            Monday to Friday <span class="time">8am – 9pm</span>
-          </p>
-          <p>
-            Saturday & Sunday	<span class="time">9am – 9pm</span>
-          </p>
+      <div class="container contact-container">
+        <div class="contact-col">
+          <div class="item">
+            <h2 class="subheading">Samsung Plaza</h2>
+            <p class="time">
+              661 Keeaumoku Street #105A <br>
+              Honolulu, Hawaii 96814 <br>
+              (808) 721-7303 <br>
+              <a class="hiblend-email" href="#">hiblendcoffee@gmail.com</a>
+            </p>
+          </div>
+
+          <div class="item">
+            <h2 class="subheading">Hours</h2>
+            <p class="time">
+              Monday to Friday <span class="time">9am – 730pm</span>
+            </p>
+            <p class="time">
+              Saturday & Sunday	<span class="time">8am – 730pm</span>
+            </p>
+          </div>
+
+          <div class="item">
+            <div class="map">
+              <script src='https://maps.googleapis.com/maps/api/js?v=3.exp'></script><div style='overflow:hidden;height:360px;width:100%;'><div id='gmap_canvas' style='height:360px;width:100%;'></div><div><small><a href="http://embedgooglemaps.com">									embed google maps							</a></small></div><div><small><a href="http://www.autohuren.world/">auto huren</a></small></div><style>#gmap_canvas img{max-width:none!important;background:none!important}</style></div><script type='text/javascript'>function init_map(){var myOptions = {zoom:17,center:new google.maps.LatLng(21.294654,-157.841542,102),mapTypeId: google.maps.MapTypeId.HYBRID};map = new google.maps.Map(document.getElementById('gmap_canvas'), myOptions);marker = new google.maps.Marker({map: map,position: new google.maps.LatLng(21.294654,-157.841542,102)});infowindow = new google.maps.InfoWindow({content:'<strong>HBlend Health Bar & Cafe</strong><br>661 Keeaumoku Street #105A  Honolulu, Hawaii 96814<br>'});google.maps.event.addListener(marker, 'click', function(){infowindow.open(map,marker);});infowindow.open(map,marker);}google.maps.event.addDomListener(window, 'load', init_map);</script>
+            </div>
+            <a href="#">Get Directions</a>
+          </div>
+
         </div>
 
-        <div class="item">
-          <h2 class="subheading">Located in the Samsung Plaza</h2>
-          <p>
-            661 Keeaumoku Street #105A <br>
-            Honolulu, Hawaii 96814 <br>
-            (808) 721-7303 <br>
-            <a href="#">hiblendcoffee@gmail.com</a>
-          </p>
-        </div>
+        <div class="contact-col">
+          <div class="item">
+            <h2 class="subheading">Wahiawa</h2>
+            <p class="time">
+              1718 Wilikina Dr F14 <br>
+              Wahiawa, HI 96786 <br>
+              (808) 425-4328 <br>
+              <a class="hiblend-email" href="#">hiblendcoffee@gmail.com</a>
+            </p>
+          </div>
 
-        <div class="map">
-          <script src='https://maps.googleapis.com/maps/api/js?v=3.exp'></script><div style='overflow:hidden;height:360px;width:100%;'><div id='gmap_canvas' style='height:360px;width:100%;'></div><div><small><a href="http://embedgooglemaps.com">									embed google maps							</a></small></div><div><small><a href="http://www.autohuren.world/">auto huren</a></small></div><style>#gmap_canvas img{max-width:none!important;background:none!important}</style></div><script type='text/javascript'>function init_map(){var myOptions = {zoom:17,center:new google.maps.LatLng(21.294654,-157.841542,102),mapTypeId: google.maps.MapTypeId.HYBRID};map = new google.maps.Map(document.getElementById('gmap_canvas'), myOptions);marker = new google.maps.Marker({map: map,position: new google.maps.LatLng(21.294654,-157.841542,102)});infowindow = new google.maps.InfoWindow({content:'<strong>HBlend Health Bar & Cafe</strong><br>661 Keeaumoku Street #105A  Honolulu, Hawaii 96814<br>'});google.maps.event.addListener(marker, 'click', function(){infowindow.open(map,marker);});infowindow.open(map,marker);}google.maps.event.addDomListener(window, 'load', init_map);</script>
+          <div class="item">
+            <h2 class="subheading">Hours</h2>
+            <p class="time">
+              Monday to Sundaay <span class="time">11am – 7pm</span>
+            </p>
+          </div>
+
+          <div class="item">
+            <div class="map">
+              <script src='https://maps.googleapis.com/maps/api/js?v=3.exp'></script><div style='overflow:hidden;height:360px;width:100%;'><div id='gmap_canvas' style='height:360px;width:100%;'></div><div><small><a href="http://embedgooglemaps.com">									embed google maps							</a></small></div><div><small><a href="http://www.autohuren.world/">auto huren</a></small></div><style>#gmap_canvas img{max-width:none!important;background:none!important}</style></div><script type='text/javascript'>function init_map(){var myOptions = {zoom:17,center:new google.maps.LatLng(21.294654,-157.841542,102),mapTypeId: google.maps.MapTypeId.HYBRID};map = new google.maps.Map(document.getElementById('gmap_canvas'), myOptions);marker = new google.maps.Marker({map: map,position: new google.maps.LatLng(21.294654,-157.841542,102)});infowindow = new google.maps.InfoWindow({content:'<strong>HBlend Health Bar & Cafe</strong><br>661 Keeaumoku Street #105A  Honolulu, Hawaii 96814<br>'});google.maps.event.addListener(marker, 'click', function(){infowindow.open(map,marker);});infowindow.open(map,marker);}google.maps.event.addDomListener(window, 'load', init_map);</script>
+            </div>
+
+            <a href="#">Get Directions</a>
+          </div>
         </div>
       </div>
     </section>
 
     <section class="instagram">
-      <h1>visit us on instagram <br> @hiblend</h1>
+      <div class="instagram-img header-img">
+      </div>
+      <h1>visit us on instagram @hiblend</h1>
 
       <div class="ig_images">
         <img src="images/salmon.jpg" alt="smoked salmon">
@@ -701,25 +730,25 @@
 
 
     <footer class="footer">
-      <div class="row">
+
         <div class="footerlogo">
-          <a class="" href="#"><img class="logo"src="images/footerlogo.jpg" alt="logo" /></a>
+          <a class="" href="#"><img class="logo"src="images/hiblend_logo_black.png" alt="logo" /></a>
         </div>
+
+        <div class="footer-content">
           <div class="foot">
             <p class="copyright">&copy; Copyright HiBlend Health Bar & Cafe All Rights Reserved.</p>
           </div>
 
           <div class="foot">
             <ul>
-              <li><a href="https://www.facebook.com/Hiblendcoffee808"><i class="fa fa-facebook"></i></a> <a href="https://www.facebook.com/Hiblendcoffee808">LIKE US</a></li>
-              <li><a href="https://twitter.com/hiblend"> <i class="fa fa-twitter"></i></a> <a href="https://twitter.com/hiblend">TWEET US</a></li>
-              <li><a href="https://www.pinterest.com/HiBlend808/"><i class="fa fa-pinterest-p"></i></a><a href="https://www.pinterest.com/HiBlend808/">PIN US</a> </li>
-              <li><a href="https://www.instagram.com/hiblend/"><i class="fa fa-instagram"></i></a><a href="https://www.instagram.com/hiblend/">TAG US</a> </li>
+              <li><a class="foot-nav" href="https://www.facebook.com/Hiblendcoffee808"><i class="fab fa-facebook-f"></i></a>FOLLOW US</li>
+              <!-- <li><a href="https://twitter.com/hiblend"> <i class="fa fa-twitter"></i></a> <a href="https://twitter.com/hiblend">TWEET US</a></li> -->
+              <!-- <li><a href="https://www.pinterest.com/HiBlend808/"><i class="fa fa-pinterest-p"></i></a><a href="https://www.pinterest.com/HiBlend808/">PIN US</a> </li> -->
+              <li><a class="foot-nav" href="https://www.instagram.com/hiblend/"><i class="fab fa-instagram"></i></a>TAG US</li>
             </ul>
           </div>
-      </div>
-
-
+        </div>
 
     </footer>
 
