--- a/src/index.html
+++ b/src/index.html
@@ -58,8 +58,8 @@
 
       <nav class="location-nav">
         <ul>
-          <li><a href="#" id="">KEEAUMOKU</a></li>
-          <li><a href="#" id="">WAHIAWA</a></li>
+          <li><a href="#" id="">KEEAUMOKU <span class="arrows">>></span> </a></li>
+          <li><a href="#" id="">WAHIAWA <span class="arrows">>></span> </a></li>
         </ul>
       </nav>
 
@@ -675,9 +675,9 @@
 
           <div class="item">
             <div class="map">
-              <script src='https://maps.googleapis.com/maps/api/js?v=3.exp'></script><div style='overflow:hidden;height:360px;width:100%;'><div id='gmap_canvas' style='height:360px;width:100%;'></div><div><small><a href="http://embedgooglemaps.com">									embed google maps							</a></small></div><div><small><a href="http://www.autohuren.world/">auto huren</a></small></div><style>#gmap_canvas img{max-width:none!important;background:none!important}</style></div><script type='text/javascript'>function init_map(){var myOptions = {zoom:17,center:new google.maps.LatLng(21.294654,-157.841542,102),mapTypeId: google.maps.MapTypeId.HYBRID};map = new google.maps.Map(document.getElementById('gmap_canvas'), myOptions);marker = new google.maps.Marker({map: map,position: new google.maps.LatLng(21.294654,-157.841542,102)});infowindow = new google.maps.InfoWindow({content:'<strong>HBlend Health Bar & Cafe</strong><br>661 Keeaumoku Street #105A  Honolulu, Hawaii 96814<br>'});google.maps.event.addListener(marker, 'click', function(){infowindow.open(map,marker);});infowindow.open(map,marker);}google.maps.event.addDomListener(window, 'load', init_map);</script>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14869.657906575676!2d-157.8415495!3d21.2946328!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xfa4843b20709d5df!2sHiBlend+Health+Bar+%26+Cafe!5e0!3m2!1sen!2sus!4v1522105382477" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
             </div>
-            <a href="#">Get Directions</a>
+            <a href="https://goo.gl/maps/Eyd8yHtf6HG2">Get Directions</a>
           </div>
 
         </div>
@@ -702,10 +702,10 @@
 
           <div class="item">
             <div class="map">
-              <script src='https://maps.googleapis.com/maps/api/js?v=3.exp'></script><div style='overflow:hidden;height:360px;width:100%;'><div id='gmap_canvas' style='height:360px;width:100%;'></div><div><small><a href="http://embedgooglemaps.com">									embed google maps							</a></small></div><div><small><a href="http://www.autohuren.world/">auto huren</a></small></div><style>#gmap_canvas img{max-width:none!important;background:none!important}</style></div><script type='text/javascript'>function init_map(){var myOptions = {zoom:17,center:new google.maps.LatLng(21.294654,-157.841542,102),mapTypeId: google.maps.MapTypeId.HYBRID};map = new google.maps.Map(document.getElementById('gmap_canvas'), myOptions);marker = new google.maps.Marker({map: map,position: new google.maps.LatLng(21.294654,-157.841542,102)});infowindow = new google.maps.InfoWindow({content:'<strong>HBlend Health Bar & Cafe</strong><br>661 Keeaumoku Street #105A  Honolulu, Hawaii 96814<br>'});google.maps.event.addListener(marker, 'click', function(){infowindow.open(map,marker);});infowindow.open(map,marker);}google.maps.event.addDomListener(window, 'load', init_map);</script>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14849.314456729475!2d-158.0500585!3d21.4948447!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xe41a261efd735e52!2sHiblend!5e0!3m2!1sen!2sus!4v1522105269817" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
             </div>
 
-            <a href="#">Get Directions</a>
+            <a href="https://goo.gl/maps/VccbYV4QKTD2">Get Directions</a>
           </div>
         </div>
       </div>
