--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
     <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js" integrity="sha384-SlE991lGASHoBfWbelyBPLsUlwY1GwNDJo3jSJO04KZ33K2bwfV9YBauFfnzvynJ" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="./js/jquery-1.6.1.min.js"></script>
+    <script type="text/javascript" src="./js/jquery-embedagram.pack.js"></script>
+    <style media="screen">
+      .instagram div {
+        display: inline-flex;
+      }
+    </style>
+    <script type="text/javascript">
+        $(document).ready(function() {
+            $('#slideshow').embedagram({
+                instagram_id: 496314238,
+                thumb_width: 313.33,
+                wrap_tag: 'div'
+            });
+        });
+    </script>
+    <script>
+
+/*
+ * embedagram - embed your instagram photos
+ *   http://embedagram.com/plugin.php
+ *
+ * Copyright (c) 2011 Matthew Hokanson (http://h0ke.com)
+ * Licensed under the MIT (http://www.opensource.org/licenses/mit-license.php)
+ */
+eval(function(p,a,c,k,e,r){e=function(c){return c.toString(a)};if(!''.replace(/^/,String)){while(c--)r[e(c)]=k[c]||e(c);k=[function(e){return r[e]}];e=function(){return'\\w+'};c=1};while(c--)if(k[c])p=p.replace(new RegExp('\\b'+e(c)+'\\b','g'),k[c]);return p}('(0($){$.q.h({7:0(d){1 e={8:-v,4:u,2:\'n\',3:\'m\',5:l,f:0(){6 j},};1 d=$.h(e,d);6 g.k(0(){1 o=d;1 b=$(g);1 c="p://7.i/e/r/"+o.8+"/?s=?";c+="&4="+o.4+"&2="+o.2;c+="&5="+o.5+"&3="+o.3;$.t(c,0(a){b.9(a.9);o.f.w(b)});6 b})}})})(x);',34,34,'function|var|wrap_tag|link_type|thumb_width|limit|return|embedagram|instagram_id|html||||||success|this|extend|com|true|each|20|web|li||http|fn|plugin|callback|getJSON|100|999|apply|jQuery'.split('|'),0,{}))
+
+</script>
 
   </head>
 
@@ -232,7 +260,7 @@
                     Greenaid <span class="price">  7.95</span>
                   </p>
                     <p class="ingredient">
-                      Apple, lemon, cilantro, celery, cucumber, lime, waiola
+                      Apple, lemon, cilantro, celery, cucumber, lime, Waiola
                       coconut water
                     </p>
                 </div>
@@ -265,17 +293,26 @@
                     Red Dragon <span class="price">7.95</span>
                   </p>
                     <p class="ingredient">
-                      Orange, grape, lilikoi, dragonfruit
+                      Orange, grape, lilikoi (when available, may substitute with pineapple), dragonfruit
                     </p>
                 </div>
 
                 <div class="item">
                   <p>
-                    Tropical Trip <span class="price">7.25</span>
+                    Tropical Trip <span class="price">7.50</span>
                   </p>
                     <p class="ingredient">
                       Mango, pineapple, spinach, kale, almond milk,
                       option to add banana
+                    </p>
+                </div>
+
+                <div class="item">
+                  <p>
+                    Green Giant <span class="price">7.50</span>
+                  </p>
+                    <p class="ingredient">
+                      Orange, grape, spinach, Kale, option to add banana
                     </p>
                 </div>
 
@@ -309,10 +346,10 @@
 
                 <div class="item">
                   <p>
-                    Berry Banana <span class="price">  7.25</span>
+                    Berry Banana <span class="price">  7.95</span>
                   </p>
                     <p class="ingredient">
-                      Banana, cherry, strawberry, and your choice of milk:
+                      Banana, blueberry, strawberry, and your choice of milk:
                       Soy, almond, coconut or whole
                     </p>
                 </div>
@@ -338,21 +375,13 @@
 
                 <div class="item">
                   <p>
-                    It’s All Berry  <span class="price">  7.95</span>
+                    Turmenator Smoothie  <span class="price">8.50</span>
                   </p>
                     <p class="ingredient">
-                      Cherry, strawberry, blueberry, apple, juice, coconut milk
+                      Turmeric, banana, hone, pineapple, apple, mango, orange and coconut milk
                     </p>
                 </div>
 
-                <div class="item">
-                  <p>
-                    Grape Escape  <span class="price">  7.95</span>
-                  </p>
-                    <p class="ingredient">
-                      Mango, grape, apple juice
-                    </p>
-                </div>
               </div>
           </div>
           <a class="back-button" href="#menu"><p class="back">
@@ -372,7 +401,7 @@
                     Acai Bowl <span class="price">9.95</span>
                   </p>
                     <p class="ingredient">
-                      Acai blended with strawberry, blueberry, banana, and apple juice. Topped with banana, blueberry, strawberry, apple, granola, and honey
+                      Acai blended with strawberries, blueberries, bananas, and apple juice. Topped with bananas, blueberries, strawberries, apple, granola, and honey
                     </p>
                 </div>
 
@@ -381,7 +410,7 @@
                     HiBlend Acai Bowl <span class="price">11.50</span>
                   </p>
                     <p class="ingredient">
-                      Acai blended with strawberry, blueberry, banana, and apple juice. Topped with bananas, blueberry, strawberry, apple, kiwi, pineapple, granola, toasted coconut, bee pollen, and honey
+                      Acai blended with strawberries, blueberries, bananas, and apple juice. Topped with bananas, blueberries, strawberries, apples, kiwi, pineapple, granola, toasted coconut, bee pollen, and honey
                     </p>
                 </div>
 
@@ -390,7 +419,7 @@
                     Dragon Bowl <span class="price">9.95</span>
                   </p>
                     <p class="ingredient">
-                      Dragon fruit blended with strawberry, blueberry, banana, and coconut milk. Topped with banana, blueberry, strawberry, kiwi, granola, toasted coconut, and honey
+                      Dragon fruit blended with strawberries, blueberries, bananas, and coconut milk. Topped with bananas, blueberries, strawberries, kiwi, granola, toasted coconut, and honey
                     </p>
                 </div>
 
@@ -399,7 +428,7 @@
                     Aloha Bowl <span class="price">12.50</span>
                   </p>
                     <p class="ingredient">
-                      Acai and dragon fruit blended with poi, strawberry, mango and coconut milk. Topped with strawberry, papaya, pineapple, toasted coconut, chia seeds, bee pollen, granola, honey, and mint
+                      Acai and dragon fruit blended with poi, strawberries, blueberries, mango and coconut milk. Topped with strawberries, papaya, pineapple, toasted coconut, chia seeds, bee pollen, granola, honey, and mint
                     </p>
                 </div>
 
@@ -428,30 +457,6 @@
           <div id="menufood">
             <div class="container">
             </div>
-
-
-              <div class="sidebar">
-                <h2 class="dressing">HOUSE DRESSINGS</h2>
-                  <div class="house">
-
-                    <ul class="col-1">
-                      <li>Pesto</li>
-                      <li>Pesti Aioli</li>
-                      <li>Garlic Citrus Aioli</li>
-                    </ul>
-
-                    <ul class="col-1">
-                      <li>Roasted Garlic Aioli</li>
-                      <li>Kale</li>
-                      <li>Kale Pesto Aioli</li>
-                    </ul>
-
-                    <ul class="col-1">
-                      <li>Smoked Pepper Aioli</li>
-                      <li>Avocado Aioli</li>
-                    </ul>
-                  </div>
-              </div>
             <!-- </div> -->
 
 
@@ -461,19 +466,11 @@
                 <div class="item">
                   <h2>SALADS</h2>
                   <p>
-                    Ahi Tartare <span class="price">MP</span>
+                    Ahi Tartare <span class="price">
+                      *MP</span>
                   </p>
                     <p class="ingredient">
-                      Fresh ahi, capers, red onions, mixed with Caesar dressing, served over halved avocado and a bed of spinach. Topped with parmesan cheese, cracked pepper, Caesar and pesto dressing and chives
-                    </p>
-                </div>
-
-                <div class="item">
-                  <p>
-                    Poke Tartare <span class="price">MP</span>
-                  </p>
-                    <p class="ingredient">
-                      Fresh ahi, cucumber, sweet onion, and chili flakes mixed with homemade sweet sesame ginger shoyu dressing. Served over halved avocado and a bed of mixed greens. Drizzled with chili oil and topped with cracked pepper and green onions
+                      Fresh ahi, capers, red onions, mixed with Caesar dressing, served over halved avocado and a bed of spinach. Topped with parmesan cheese, cracked pepper, Caesar and kale pesto dressing and chives
                     </p>
                 </div>
 
@@ -497,20 +494,21 @@
 
                 <div class="item">
                   <p>
-                    Tomato Caprese Trio <span class="price">10.95</span>
+                    Veganese <span class="price">11.95</span>
                   </p>
                     <p class="ingredient">
-                      Tomatoes, buffalo mozzarella, feta cheese, red onions, capers, basil, mixed greens with garlic citrus, pesto and a balsamic olive oil vinaigrette dressing
+                      Mixed greens and kale tossed with apple, celery, homemade thai peanut dressing. Topped with carrots, cucumber, red onions, peanuts, sesame seeds, and mint
                     </p>
                 </div>
 
                 <div class="item">
+                  <h2>WRAPS</h2>
                   <p>
-                    Veganese <span class="price">11.95</span>
+                    Spinach Turkey Caesar Wrap <span class="price">10.25</span>
                   </p>
-                    <p class="ingredient">
-                      Mixed greens and kale tossed with apple, celery, tossed with homemade thai peanut dressing. Topped with carrots, cucumber, red onions, peanuts, sesame seeds, and mint
-                    </p>
+                  <p class="ingredient">
+                    Oven roasted turkey, spinach, tomato, avocado, parmesan cheese, red onions, and Caesar dressing in spinach wrap
+                  </p>
                 </div>
               </div>
 
@@ -519,10 +517,10 @@
                 <div class="item">
                   <h2>SANDWICHES</h2>
                   <p>
-                    Baked Ahi <span class="price">MP</span>
+                    Baked Ahi <span class="price">*MP</span>
                   </p>
                     <p class="ingredient">
-                      Oven baked ahi, tomato, avocado, pepper jack cheese, and curly kale croissant with organic aioli dressing
+                      Oven baked ahi, tomato, avocado, pepper jack cheese, and curly kale on croissant
                     </p>
                 </div>
 
@@ -531,34 +529,34 @@
                     Smoked Salmon & Bacon <span class="price">11.95</span>
                   </p>
                     <p class="ingredient">
-                      Smoked salmon, bacon, tomato, avocado, spinach, red onions, cream cheese on sourdough with your choice of house dressing
+                      Smoked salmon, bacon, tomato, avocado, spinach, red onions, cream cheese on sourdough bread
                     </p>
                 </div>
 
                 <div class="item">
                   <p>
-                    The BALT <span class="price"> 10.95</span>
+                    The BALT <span class="price"> 11.25</span>
                   </p>
                     <p class="ingredient">
-                      Bacon, tomato, avocado, pepper jack cheese, kale, on croissant with your choice of house dressing
+                      Bacon, tomato, avocado, pepper jack cheese, kale, on croissant
                     </p>
                 </div>
 
                 <div class="item">
                   <p>
-                    Smoked Turkey Breast <span class="price"> 10.95</span>
+                    Oven Roasted Turkey Sandwich  <span class="price"> 11.25</span>
                   </p>
                     <p class="ingredient">
-                      Smoked turkey, tomato, avocado, pepper jack cheese, and spinach on sourdough with your choice of house dressing
+                      Smoked turkey, tomato, avocado, pepper jack cheese, and spinach on sourdough bread
                     </p>
                 </div>
 
                 <div class="item">
                   <p>
-                    The Steamer <span class="price"> 10.95</span>
+                    The Steamer <span class="price"> 11.95</span>
                   </p>
                     <p class="ingredient">
-                      Steamed eggs, bacon, tomato, avocado, red onions, pepper jack cheese, and spinach with house dressing on your choice of bagel, croissant or spinach wrap
+                      Steamed eggs, bacon, tomato, avocado, red onions, pepper jack cheese, and spinach on croissant
                     </p>
                 </div>
 
@@ -567,8 +565,26 @@
                     Lox Bagel <span class="price"> 11.95</span>
                   </p>
                     <p class="ingredient">
-                      Smoked salmon, red onions, capers, cream cheese on bagel with your choice of house dressing
+                      Smoked salmon, red onions, capers, cream cheese on bagel
                     </p>
+                </div>
+
+                <div class="sidebar">
+                  <p class="ingredient">**All sandwiches are served with organic mixed greens and your choice of homemade dressing</p>
+                    <div class="house">
+
+                      <ul class="col-1">
+                        <li>Roasted Garlic Aioli</li>
+                        <li>Avocado Aioli</li>
+                        <li>Garlic Citrus Aioli</li>
+                      </ul>
+
+                      <ul class="col-1">
+                        <li>Arugula Pesto</li>
+                        <li>Smoked Pepper Aioli</li>
+                      </ul>
+
+                    </div>
                 </div>
 
                 <p class="market">
@@ -578,66 +594,7 @@
 
               <div class="col food-item">
 
-                <div class="item">
-                  <h2>WRAPS</h2>
-                  <p>
-                    Spinach Turkey Caesar Wrap <span class="price">10.25</span>
-                  </p>
-                  <p class="ingredient">
-                    Smoked turkey, spinach, tomato, avocado, parmesan cheese, red onions, and Caesar dressing in spinach wrap
-                  </p>
-                </div>
 
-                <div class="item">
-                  <p>
-                    Tuna Salad Wrap <span class="price">MP</span>
-                  </p>
-                  <p class="ingredient">
-                    Oven baked ahi, mixed greens, cucumber, celery, red onions, tomato, avocado, parmesan cheese with your choice of house dressing in spinach wrap
-                  </p>
-                </div>
-
-
-                <div class="item">
-                  <h2 class="special">PASTRIES</h2>
-                  <p>
-                    Cinnamon Raisin Bagel<span class="price">4.75</span>
-                  </p>
-                  <p class="ingredient">
-                    Cream cheese, raisins, cinnamon, and brown sugar on
-                    plain bagel
-                  </p>
-                </div>
-
-
-
-                <div class="item">
-                  <h2 class="special">SPECIALS</h2>
-                  <p>
-                    Watermelon Pizza Salad <span class="price">11.95</span>
-                  </p>
-                  <p class="ingredient">
-                    Chia seeds, bee pollen, mint, honey, pear, blueberries, kiwi, strawberries, spinach, mixed with raspberry vinaigrette, topped with crumbled goat cheese
-                  </p>
-                </div>
-
-                <div class="item">
-                  <p>
-                    HiBlend Limeade <span class="price">7.95</span>
-                  </p>
-                    <p class="ingredient">
-                      Lime, apple, and pear
-                    </p>
-                </div>
-
-                <div class="item">
-                  <p>
-                    Watermelon cooler <span class="price">7.25</span>
-                  </p>
-                    <p class="ingredient">
-                      Watermelon, strawberry, and mint
-                    </p>
-                </div>
               </div>
               <a class="back-button f-back" href="#menu"><p class="back">
               BACK TO MENU OPTIONS >>
@@ -711,22 +668,12 @@
       </div>
     </section>
 
-    <section class="instagram">
-      <div class="instagram-img header-img">
+    <div class="instagram">
+      <div class="instagram-feed header-img">
       </div>
       <h1>visit us on instagram @hiblend</h1>
 
-      <div class="ig_images">
-        <img src="images/salmon.jpg" alt="smoked salmon">
-        <img src="images/crossiant.jpg" alt="ahi">
-        <img  class="toast" src="images/toast.jpg" alt="shot toast">
-        <img src="images/balt.jpg" alt="balt">
-        <img src="images/jars.jpg" alt="juices in mason jars">
-        <img src="images/avocado.jpg" alt="avocado tomato sandwich">
-        <img src="images/wrap.jpg" alt="spinach wrap">
-        <img src="images/takeout.jpg" alt="smoked salmon in takeout box">
-      </div>
-    </section>
+    </div>
 
 
     <footer class="footer">
