--- a/src/index.html
+++ b/src/index.html
@@ -6,34 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
     <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js" integrity="sha384-SlE991lGASHoBfWbelyBPLsUlwY1GwNDJo3jSJO04KZ33K2bwfV9YBauFfnzvynJ" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="./js/jquery-1.6.1.min.js"></script>
-    <script type="text/javascript" src="./js/jquery-embedagram.pack.js"></script>
-    <style media="screen">
-      .instagram div {
-        display: inline-flex;
-      }
-    </style>
-    <script type="text/javascript">
-        $(document).ready(function() {
-            $('#slideshow').embedagram({
-                instagram_id: 496314238,
-                thumb_width: 313.33,
-                wrap_tag: 'div'
-            });
-        });
-    </script>
-    <script>
 
-/*
- * embedagram - embed your instagram photos
- *   http://embedagram.com/plugin.php
- *
- * Copyright (c) 2011 Matthew Hokanson (http://h0ke.com)
- * Licensed under the MIT (http://www.opensource.org/licenses/mit-license.php)
- */
-eval(function(p,a,c,k,e,r){e=function(c){return c.toString(a)};if(!''.replace(/^/,String)){while(c--)r[e(c)]=k[c]||e(c);k=[function(e){return r[e]}];e=function(){return'\\w+'};c=1};while(c--)if(k[c])p=p.replace(new RegExp('\\b'+e(c)+'\\b','g'),k[c]);return p}('(0($){$.q.h({7:0(d){1 e={8:-v,4:u,2:\'n\',3:\'m\',5:l,f:0(){6 j},};1 d=$.h(e,d);6 g.k(0(){1 o=d;1 b=$(g);1 c="p://7.i/e/r/"+o.8+"/?s=?";c+="&4="+o.4+"&2="+o.2;c+="&5="+o.5+"&3="+o.3;$.t(c,0(a){b.9(a.9);o.f.w(b)});6 b})}})})(x);',34,34,'function|var|wrap_tag|link_type|thumb_width|limit|return|embedagram|instagram_id|html||||||success|this|extend|com|true|each|20|web|li||http|fn|plugin|callback|getJSON|100|999|apply|jQuery'.split('|'),0,{}))
-
-</script>
 
   </head>
 
@@ -87,7 +60,7 @@ eval(function(p,a,c,k,e,r){e=function(c){return c.toString(a)};if(!''.replace(/^
       <nav class="location-nav">
         <ul>
           <li class="keeaumoku active"><a href="#/">KEEAUMOKU <span class="arrows">>></span> </a></li>
-          <li class="wahiawa" onclick="myFunction()"><a href="#/">WAHIAWA <span class="arrows">>></span> </a></li>
+          <li class="wahiawa" onclick="myFunction"><a href="#/">WAHIAWA <span class="arrows">>></span> </a></li>
         </ul>
       </nav>
 
@@ -132,7 +105,7 @@ eval(function(p,a,c,k,e,r){e=function(c){return c.toString(a)};if(!''.replace(/^
                   </p>
                 </div>
 
-                <div class="item wahiawa-menu">
+                <div class="item wahiawa-menu hide">
                   <p>
                     Wahiawa Sunrise <span class="price">2.50</span>
                   </p>
@@ -388,7 +361,7 @@ eval(function(p,a,c,k,e,r){e=function(c){return c.toString(a)};if(!''.replace(/^
                     </p>
                 </div>
 
-                <div class="item wahiawa-menu">
+                <div class="item wahiawa-menu hide">
                   <p>
                     Pump You Up <span class="price">8.75</span>
                   </p>
@@ -397,7 +370,7 @@ eval(function(p,a,c,k,e,r){e=function(c){return c.toString(a)};if(!''.replace(/^
                     </p>
                 </div>
 
-                <div class="item wahiawa-menu">
+                <div class="item wahiawa-menu hide">
                   <p>
                     Soldier Smoothie <span class="price">8.50</span>
                   </p>
@@ -567,7 +540,7 @@ eval(function(p,a,c,k,e,r){e=function(c){return c.toString(a)};if(!''.replace(/^
                     </p>
                 </div>
 
-                <div class="item wahiawa-menu">
+                <div class="item wahiawa-menu hide">
                   <p>
                     Jidori Chicken Sandwich  <span class="price"> 11.25</span>
                   </p>
@@ -585,7 +558,7 @@ eval(function(p,a,c,k,e,r){e=function(c){return c.toString(a)};if(!''.replace(/^
                     </p>
                 </div>
 
-                <div id="keeaumoku-menu" class="item">
+                <div class="item keeaumoku-menu">
                   <p>
                     Lox Bagel <span class="price"> 11.95</span>
                   </p>
@@ -594,7 +567,7 @@ eval(function(p,a,c,k,e,r){e=function(c){return c.toString(a)};if(!''.replace(/^
                     </p>
                 </div>
 
-                <div class="item wahiawa-menu">
+                <div class="item wahiawa-menu hide">
                   <p>
                     Grass Fed Kulana Burger <span class="price"> 14.95</span>
                   </p>
@@ -706,6 +679,9 @@ eval(function(p,a,c,k,e,r){e=function(c){return c.toString(a)};if(!''.replace(/^
       <div class="instagram-feed header-img">
       </div>
       <h1>visit us on instagram @hiblend</h1>
+
+        <!-- LightWidget WIDGET --><script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script>
+        <iframe src="//lightwidget.com/widgets/5163dcec490d5b19aaf95e068ffb8841.html" scrolling="no" allowtransparency="true" class="lightwidget-widget"></iframe>
 
     </div>
 
