fixed wahiawa/keeamoku toggle

--- a/src/index.html
+++ b/src/index.html
@@ -66,9 +66,9 @@
 
       <nav class="menu-subnav">
           <ul>
-            <li><a href="#/" id="a">Drinks</a></li>
-            <li><a href="#/" id="b">Health Bowls</a></li>
-            <li><a href="#/" id="c">Food</a></li>
+            <li class="selected"><a href="#/" id="a">Drinks</a></li>
+            <li onclick="myFunction"><a href="#/" id="b">Health Bowls</a></li>
+            <li onclick="myFunction"><a href="#/" id="c">Food</a></li>
             <!-- <li><a href="#">Download PDF</a></li> -->
           </ul>
       </nav>
