fixed scroll, working on media queries

--- a/src/index.html
+++ b/src/index.html
@@ -11,11 +11,11 @@
   </head>
 
   <body>
-    <header class="hiblend-header">
+    <header id="home" class="hiblend-header">
       <div class="hiblend-header-img">
-        <nav class="main-nav row">
+        <nav class="main-nav">
           <a class="nav-toggle"href="#"></a>
-          <a class="nav-logo" href="#"><img src="images/hiblend_logo_white.png" alt=""></a>
+          <a class="nav-logo" href="#home"><img src="images/hiblend_logo_white.png" alt=""></a>
           <ul class="main-menu">
             <li><a href="#menu">menu</a></li>
             <li><a href="#contact">contact</a></li>
@@ -52,7 +52,7 @@
       </section>
 
 
-    <section class="menu">
+    <section id="menu">
       <div class="menu-img header-img">
         <img src="images/menus.png" alt="">
       </div>
@@ -75,6 +75,9 @@
 
       <section class="drnks">
         <div id="menudrinks">
+          <div class="sampler-bg">
+
+          </div>
           <div class="container dr">
 
               <div class="drinkscol">
@@ -444,8 +447,7 @@
 
 
           <div id="menufood">
-            <div class="container">
-            </div>
+
             <!-- </div> -->
 
 
@@ -576,8 +578,12 @@
                     </p>
                 </div>
 
+                <p class="market">
+                  *MP = Market Price
+                </p>
+
                 <div class="sidebar">
-                  <p class="ingredient">**All sandwiches are served with organic mixed greens and your choice of homemade dressing</p>
+                  <p class="ingredient house-dressings">**All sandwiches are served with organic mixed greens and your choice of homemade dressing</p>
                     <div class="house">
 
                       <ul class="col-1">
@@ -593,10 +599,6 @@
 
                     </div>
                 </div>
-
-                <p class="market">
-                  *MP = Market Price
-                </p>
               </div>
 
               <div class="col food-item">
@@ -610,7 +612,7 @@
           </div>
       </section>
 
-    <section class="contact">
+    <section id="contact">
       <div class="contact-img header-img">
         <img src="images/contact.png" alt="">
       </div>
