--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
     </header>
 
 
-    <section id="home" class="home">
+    <section id="about" class="home">
       <div class="row home-intro">
         <h1>Stay Healthy Friends!</h1>
         <p>
@@ -483,7 +483,7 @@
                     </p>
                 </div>
 
-                <div class="item">
+                <div class="item wraps">
                   <p>
                     Veganese <span class="price">11.95</span>
                   </p>
@@ -601,10 +601,6 @@
                 </div>
               </div>
 
-              <div class="col food-item">
-
-
-              </div>
               <a class="back-button f-back" href="#menu"><p class="back">
               BACK TO MENU OPTIONS >>
               </p></a>
@@ -641,7 +637,7 @@
 
           <div class="item">
             <div class="map">
-              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14869.657906575676!2d-157.8415495!3d21.2946328!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xfa4843b20709d5df!2sHiBlend+Health+Bar+%26+Cafe!5e0!3m2!1sen!2sus!4v1522105382477" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14869.657906575676!2d-157.8415495!3d21.2946328!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xfa4843b20709d5df!2sHiBlend+Health+Bar+%26+Cafe!5e0!3m2!1sen!2sus!4v1522105382477" frameborder="0" style="border:0" allowfullscreen></iframe>
             </div>
             <a href="https://goo.gl/maps/Eyd8yHtf6HG2">Get Directions</a>
           </div>
@@ -668,7 +664,7 @@
 
           <div class="item">
             <div class="map">
-              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14849.314456729475!2d-158.0500585!3d21.4948447!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xe41a261efd735e52!2sHiblend!5e0!3m2!1sen!2sus!4v1522105269817" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14849.314456729475!2d-158.0500585!3d21.4948447!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xe41a261efd735e52!2sHiblend!5e0!3m2!1sen!2sus!4v1522105269817" frameborder="0" style="border:0" allowfullscreen></iframe>
             </div>
 
             <a href="https://goo.gl/maps/VccbYV4QKTD2">Get Directions</a>
@@ -683,7 +679,11 @@
       <h1>visit us on instagram @hiblend</h1>
 
         <!-- LightWidget WIDGET --><script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script>
-        <iframe src="//lightwidget.com/widgets/5163dcec490d5b19aaf95e068ffb8841.html" scrolling="no" allowtransparency="true" class="lightwidget-widget"></iframe>
+        <iframe src="//lightwidget.com/widgets/5163dcec490d5b19aaf95e068ffb8841.html" scrolling="no" allowtransparency="true" class="lightwidget-widget ig-desktop"></iframe>
+
+        <div class="ig-mobile-wrapper">
+          <!-- LightWidget WIDGET --><script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/4a2c714f2a3c56c696da8b7022782665.html" scrolling="no" allowtransparency="true" class="lightwidget-widget ig-mobile"></iframe>
+        </div>
 
     </div>
 
