--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
 
         <div class="hiblend-header-text">
           <h2 class="header-text-one">our food is</h2>
-          <h2>all natural <span class="header-and">&</span> </h2>
+          <h2 class="header-text-mid">all natural <span class="header-and">&</span> </h2>
           <h2 class="header-text-two">locally sourced</h2>
         </div>
 
