--- a/src/index.html
+++ b/src/index.html
@@ -14,9 +14,31 @@
     <header id="home" class="hiblend-header">
       <div class="hiblend-header-img">
         <nav class="main-nav">
-          <a class="nav-toggle"href="#"></a>
           <a class="nav-logo" href="#home"><img src="images/hiblend_logo_white.png" alt=""></a>
           <ul class="main-menu">
+            <li><a href="#menu">menu</a></li>
+            <li><a href="#contact">contact</a></li>
+          </ul>
+
+          <ul class="utility-nav">
+              <li>
+                <a href="https://www.facebook.com/Hiblendcoffee808"><i class="fab fa-facebook-f"></i></a>
+              </li>
+              <li>
+                <a href="https://www.instagram.com/hiblend/"><i class="fab fa-instagram"></i></a>
+              </li>
+          </ul>
+        </nav>
+
+        <nav class="mobile">
+          <div class="toggle_button">
+            <a href="#"><span class="bottom"></span></a>
+            <a href="#"><span class="short"></span></a>
+            <a href="#"><span class="top"></span></a>
+          </div>
+
+          <ul class="main-menu">
+            <a class="nav-logo" href="#home"><img src="images/hiblend_logo_white.png" alt=""></a>
             <li><a href="#menu">menu</a></li>
             <li><a href="#contact">contact</a></li>
           </ul>
