update instagram widget

--- a/index.html
+++ b/index.html
@@ -704,7 +704,8 @@
         <iframe src="//lightwidget.com/widgets/5163dcec490d5b19aaf95e068ffb8841.html" scrolling="no" allowtransparency="true" class="lightwidget-widget ig-desktop"></iframe>
 
         <div class="ig-mobile-wrapper">
-          <!-- LightWidget WIDGET --><script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/4a2c714f2a3c56c696da8b7022782665.html" scrolling="no" allowtransparency="true" class="lightwidget-widget ig-mobile"></iframe>
+          <!-- LightWidget WIDGET --><script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/4a2c714f2a3c56c696da8b7022782665.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" ></iframe>
+
         </div>
 
     </div>
