--- a/src/index.html
+++ b/src/index.html
@@ -700,10 +700,8 @@
       </div>
       <h1>visit us on instagram @hiblend</h1>
 
-        <div class="ig-mobile-wrapper">
-          <!-- LightWidget WIDGET --><script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/4a2c714f2a3c56c696da8b7022782665.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" ></iframe>
+      <!-- LightWidget WIDGET --><script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/4a2c714f2a3c56c696da8b7022782665.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width: 100%; border: 0; overflow: hidden;"></iframe>
 
-        </div>
 
     </div>
 
