--- a/index.html
+++ b/index.html
@@ -700,7 +700,7 @@
       </div>
       <h1>visit us on instagram @hiblend</h1>
 
-      <!-- LightWidget WIDGET --><script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/4a2c714f2a3c56c696da8b7022782665.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width: 100%; border: 0; overflow: hidden;"></iframe>
+      <!-- LightWidget WIDGET --><script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/4a2c714f2a3c56c696da8b7022782665.html" scrolling="no" allowtransparency="true" class="lightwidget-widget"></iframe>
 
 
     </div>
