--- a/src/index.html
+++ b/src/index.html
@@ -700,8 +700,9 @@
       </div>
       <h1>visit us on instagram @hiblend</h1>
 
-      <!-- LightWidget WIDGET --><script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/4a2c714f2a3c56c696da8b7022782665.html" scrolling="no" allowtransparency="true" class="lightwidget-widget"></iframe>
-
+      <div class="ig-wrapper">
+        <!-- LightWidget WIDGET --><script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script><iframe class="hiblend-ig" src="//lightwidget.com/widgets/4a2c714f2a3c56c696da8b7022782665.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="border: none;"></iframe>
+      </div>
 
     </div>
 
