added header logo

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
         </nav>
 
         <div class="hiblend-header-text">
+          <img src="images/hiblend_logo_white.png" alt="">
           <h2 class="header-text-one">our food is</h2>
           <h2 class="header-text-mid">all natural <span class="header-and">&</span> </h2>
           <h2 class="header-text-two">locally sourced</h2>
